<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#3195D3"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/train_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/train_info_start_time" />

            <View
                android:layout_width="0dp"
                android:layout_height="5dp" />

            <TextView
                style="@style/train_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/train_info_arrive_time" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/train_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/train_info_start_station" />

            <View
                android:layout_width="0dp"
                android:layout_height="5dp" />

            <TextView
                style="@style/train_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/train_info_end_station" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                style="@style/train_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/train_info_train_code" />

            <View
                android:layout_width="0dp"
                android:layout_height="5dp" />

            <TextView
                style="@style/train_title_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/train_info_lishi" />

        </LinearLayout>

        <TextView
            style="@style/train_title_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/train_info_status" />

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srl_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/lv_train_infos"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></ListView>

    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>
